--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,4 +2,280 @@
 @import 'fonts';
 @import 'reset';
 @import 'global';
-@import 'media';
+
+.header {
+  padding: 60px 0;
+
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.logo {
+  transition: background-color 0.5s,
+    border 0.5s,
+    opacity 0.5s,
+    box-shadow 0.5s;
+
+  &:focus {
+    box-shadow: 0 0 0 2px rgba(255, 104, 56, 0.7);
+    border-radius: 5px;
+  }
+
+  &:hover {
+    opacity: 0.7;
+  }
+
+  &:active {
+    opacity: 0.5;
+  }
+}
+
+.menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  &__list {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__item {
+    margin-right: 45px;
+  }
+
+  &__link {
+    font-size: 18px;
+    line-height: 1;
+    color: $dark;
+    text-decoration: underline transparent;
+    transition: background-color 0.5s,
+      border 0.5s,
+      text-shadow 0.5s,
+      color 0.5s,
+      box-shadow 0.5s;
+
+    &:focus {
+      box-shadow: 0 0 0 2px rgba(255, 104, 56, 0.7);
+      border-radius: 5px;
+    }
+
+    &:hover {
+      color: $orange;
+    }
+
+    &:active {
+      text-shadow: 2px 2px 5px rgba(49, 53, 43, 0.5);
+    }
+  }
+
+  &__link--active {
+    color: $orange;
+  }
+}
+
+.user-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  &__item {
+    margin-left: 35px;
+  }
+
+  &__link {
+    position: relative;
+  }
+
+  &__num {
+    position: absolute;
+    top: -3px;
+    left: 15px;
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    background-color: $orange;
+    color: $white;
+    font-size: 10px;
+    line-height: 1.4;
+    text-align: center;
+  }
+}
+
+.footer-top {
+  padding-bottom: 70px;
+  border-bottom: 1px solid $gray;
+
+  &__main {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+  }
+
+  &__items {
+    margin-right: 70px;
+  }
+
+  &__logo {
+    display: block;
+    margin-bottom: 30px;
+  }
+
+  &__input {
+    background-color: $white;
+    max-width: 200px;
+    width: 100%;
+    height: 44px;
+    padding: 13px 15px;
+    border: 1px solid $gray;
+    border-radius: 5px;
+    transition: box-shadow 0.5s, background-color 0.5s;
+
+    &:focus {
+      box-shadow: 0 0 0 2px $orange;
+      border-radius: 5px;
+    }
+
+    &:hover {
+      background-color: $white;
+      border: 1px solid gray;
+      box-sizing: border-box;
+      border-radius: 5px;
+    }
+
+    &__input::placeholder {
+      font-size: 14px;
+      line-height: 1;
+      color: $gray;
+      transition: color 0.5s;
+
+      &:hover::placeholder {
+        color: $darkBlue;
+        opacity: 0.9;
+      }
+    }
+
+    &__form {
+      margin-bottom: 12px;
+    }
+
+    &__btn {
+      position: relative;
+      max-width: 200px;
+      width: 100%;
+      height: 44px;
+      font-size: 14px;
+      font-weight: 500;
+      line-height: 1.3;
+      border-radius: 5px;
+      text-align: center;
+      padding: 13px 0;
+      background-color: $orange;
+      color: $white;
+      filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
+      transition: box-shadow 0.5s, color 0.5s,
+        background-color 0.5s;
+
+      &:focus {
+        background-color: rgba(255, 122, 80, 0.1);
+        box-shadow: 0 0 0 2px rgba(255, 104, 56, 0.7);
+        border-radius: 5px;
+        color: $orange;
+      }
+
+      &:hover {
+        background-color: $white;
+        box-shadow: 0 0 0 2px rgba(255, 104, 56, 0.7);
+        border-radius: 5px;
+      }
+
+      &:active {
+        background-color: #FFF2ED;
+        border-radius: 5px;
+      }
+    }
+
+    &__btn svg {
+      position: absolute;
+      left: 30px;
+      top: 15px;
+    }
+
+    &__btn svg:focus {
+      fill: $orange;
+    }
+  }
+
+  &__nav {
+    column-count: 3;
+  }
+
+  &__item {
+    margin-bottom: 20px;
+  }
+
+  &__link {
+    font-size: 18px;
+    line-height: 1.3;
+    letter-spacing: 0.01em;
+  }
+
+  &__data {
+    margin-bottom: 15px;
+  }
+
+  &__info {
+    position: relative;
+    font-size: 16px;
+    line-height: 2;
+  }
+
+  &__info svg {
+    position: absolute;
+    top: -3px;
+    left: -35px;
+  }
+
+  &__contact {
+    margin-bottom: 15px;
+  }
+
+  &__social {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__social-link svg {
+    transition: box-shadow 0.5s, background-color 0.5s, color 0.5s;
+
+    &:focus {
+      background-color: #FFF2ED;
+      box-shadow: 0 0 0 2px rgba(255, 104, 56, 0.7);
+    }
+
+    &:hover {
+      background-color: #FF7A50;
+    }
+
+    &:active {
+      background-color: #FFF2ED;
+    }
+  }
+
+  &__social-link--fb {
+    position: absolute;
+    left: -35px;
+  }
+
+  .footer-bottom {
+    padding: 30px 0;
+    text-align: center;
+  }
+
+
+
+
+  @import 'media';
