--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,15 +1,89 @@
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
+}
+
+ul,
+ol {
+  padding: 0;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol,
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+ul {
+  list-style: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+  outline: transparent;
+  border: transparent;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  outline: transparent;
+}
+
+button {
+  appearance: none;
+  border: 0;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+address {
+  font-style: normal;
+}
+
 html,
 body {
   height: 100%;
 }
 
 body {
+  font-family: 'Rubik';
   font-size: 20px;
   font-weight: 400;
   line-height: 1.5;
   background-color: $bg-color;
   color: $dark;
-  @extend %rubik-400;
+}
+
+.wrapper {
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
@@ -35,4 +109,11 @@ body {
 
 .main {
   flex-grow: 1;
+}
+
+.button {
+  background-color: $orange;
+  color: $white;
+  font-weight: 400;
+  line-height: 1.3;
 }
