--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,26 +1,20 @@
-@import 'vars';
 @import 'fonts';
-@import 'reset';
+@import 'vars';
 @import 'global';
 
 .header {
   padding: 60px 0;
-
-  &__inner {
-    display: flex;
-    justify-content: space-between;
-  }
 }
 
 .logo {
+  border-radius: 5px;
   transition: background-color 0.5s,
     border 0.5s,
     opacity 0.5s,
     box-shadow 0.5s;
 
   &:focus {
-    box-shadow: 0 0 0 2px rgba(255, 104, 56, 0.7);
-    border-radius: 5px;
+    box-shadow: 0 0 0 2px rgba($orange, 0.7);
   }
 
   &:hover {
@@ -42,7 +36,7 @@
     justify-content: space-between;
   }
 
-  &__item {
+  &__item:not(:last-child) {
     margin-right: 45px;
   }
 
@@ -56,10 +50,14 @@
       text-shadow 0.5s,
       color 0.5s,
       box-shadow 0.5s;
+    border-radius: 5px;
+
+    &--active {
+      color: $orange;
+    }
 
     &:focus {
-      box-shadow: 0 0 0 2px rgba(255, 104, 56, 0.7);
-      border-radius: 5px;
+      box-shadow: 0 0 0 2px rgba($orange, 0.7);
     }
 
     &:hover {
@@ -70,29 +68,43 @@
       text-shadow: 2px 2px 5px rgba(49, 53, 43, 0.5);
     }
   }
-
-  &__link--active {
-    color: $orange;
-  }
 }
 
 .user-nav {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
 
-  &__item {
-    margin-left: 35px;
+  &__item:not(:last-child) {
+    margin-right: 35px;
   }
 
   &__link {
+    @extend %fl;
     position: relative;
+    width: 44px;
+    height: 44px;
+    background-color: transparent;
+    border-radius: 5px;
+    transition: box-shadow 0.5s,
+      background-color 0.5s,
+      fill 0.5s;
+
+    &:focus {
+      box-shadow: 0 0 0 2px rgba($orange, 0.7);
+    }
+
+    &:hover {
+      svg path {
+        stroke: $white;
+      }
+
+      background-color: $light-orange;
+    }
   }
 
   &__num {
     position: absolute;
-    top: -3px;
-    left: 15px;
+    top: 5px;
+    right: 5px;
     width: 14px;
     height: 14px;
     border-radius: 50%;
@@ -101,111 +113,24 @@
     font-size: 10px;
     line-height: 1.4;
     text-align: center;
+
+    &:hover {
+      background-color: $white;
+      color: $light-orange;
+    }
   }
 }
 
-.footer-top {
-  padding-bottom: 70px;
-  border-bottom: 1px solid $gray;
-
-  &__main {
+.footer {
+  &__top {
+    padding-bottom: 70px;
     display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
-  }
-
-  &__items {
-    margin-right: 70px;
+    justify-content: space-between;
   }
 
   &__logo {
     display: block;
     margin-bottom: 30px;
-  }
-
-  &__input {
-    background-color: $white;
-    max-width: 200px;
-    width: 100%;
-    height: 44px;
-    padding: 13px 15px;
-    border: 1px solid $gray;
-    border-radius: 5px;
-    transition: box-shadow 0.5s, background-color 0.5s;
-
-    &:focus {
-      box-shadow: 0 0 0 2px $orange;
-      border-radius: 5px;
-    }
-
-    &:hover {
-      background-color: $white;
-      border: 1px solid gray;
-      box-sizing: border-box;
-      border-radius: 5px;
-    }
-
-    &__input::placeholder {
-      font-size: 14px;
-      line-height: 1;
-      color: $gray;
-      transition: color 0.5s;
-
-      &:hover::placeholder {
-        color: $darkBlue;
-        opacity: 0.9;
-      }
-    }
-
-    &__form {
-      margin-bottom: 12px;
-    }
-
-    &__btn {
-      position: relative;
-      max-width: 200px;
-      width: 100%;
-      height: 44px;
-      font-size: 14px;
-      font-weight: 500;
-      line-height: 1.3;
-      border-radius: 5px;
-      text-align: center;
-      padding: 13px 0;
-      background-color: $orange;
-      color: $white;
-      filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
-      transition: box-shadow 0.5s, color 0.5s,
-        background-color 0.5s;
-
-      &:focus {
-        background-color: rgba(255, 122, 80, 0.1);
-        box-shadow: 0 0 0 2px rgba(255, 104, 56, 0.7);
-        border-radius: 5px;
-        color: $orange;
-      }
-
-      &:hover {
-        background-color: $white;
-        box-shadow: 0 0 0 2px rgba(255, 104, 56, 0.7);
-        border-radius: 5px;
-      }
-
-      &:active {
-        background-color: #FFF2ED;
-        border-radius: 5px;
-      }
-    }
-
-    &__btn svg {
-      position: absolute;
-      left: 30px;
-      top: 15px;
-    }
-
-    &__btn svg:focus {
-      fill: $orange;
-    }
   }
 
   &__nav {
@@ -220,62 +145,200 @@
     font-size: 18px;
     line-height: 1.3;
     letter-spacing: 0.01em;
-  }
-
-  &__data {
-    margin-bottom: 15px;
-  }
-
-  &__info {
-    position: relative;
-    font-size: 16px;
-    line-height: 2;
-  }
-
-  &__info svg {
-    position: absolute;
-    top: -3px;
-    left: -35px;
-  }
-
-  &__contact {
-    margin-bottom: 15px;
-  }
-
-  &__social {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  &__social-link svg {
-    transition: box-shadow 0.5s, background-color 0.5s, color 0.5s;
+    transition: background-color 0.5s,
+      border 0.5s,
+      text-shadow 0.5s,
+      color 0.5s,
+      box-shadow 0.5s;
+    border-radius: 5px;
 
     &:focus {
-      background-color: #FFF2ED;
-      box-shadow: 0 0 0 2px rgba(255, 104, 56, 0.7);
+      box-shadow: 0 0 0 2px rgba($orange, 0.7);
     }
 
     &:hover {
+      color: $orange;
+    }
+
+    &:active {
+      text-shadow: 2px 2px 5px rgba(49, 53, 43, 0.5);
+    }
+  }
+
+  &__bottom {
+    padding: 30px 0;
+    border-top: 1px solid $gray;
+    text-align: center;
+  }
+}
+
+.form-subscribe {
+  max-width: 200px;
+
+  &__input {
+    background-color: $white;
+    width: 100%;
+    height: 44px;
+    padding: 13px 15px;
+    border: 1px solid $gray;
+    border-radius: 5px;
+    margin-bottom: 12px;
+    transition: box-shadow 0.5s, border 0.5s;
+
+    &::placeholder {
+      font-size: 14px;
+      line-height: 1.3;
+      color: $gray;
+      transition: color 0.5s;
+    }
+
+    &:focus {
+      box-shadow: 0 0 0 2px $orange;
+    }
+
+    &:hover {
+      border: 1px solid gray;
+
+      &::placeholder {
+        color: $darkBlue;
+        opacity: 0.9;
+      }
+    }
+  }
+
+  &__btn {
+    position: relative;
+    width: 100%;
+    height: 44px;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.3;
+    border-radius: 5px;
+    padding: 13px 0;
+    transition: box-shadow 0.5s, color 0.5s,
+      background-color 0.5s;
+
+    &:focus {
+      svg path {
+        fill: $orange;
+      }
+
+      color: $orange;
+      box-shadow: 0 0 0 2px rgba($orange, 0.7);
+    }
+
+    &:hover {
+      svg path {
+        fill: $orange;
+      }
+
+      color: $orange;
+      background-color: $white;
+      box-shadow: 0 0 0 2px rgba($orange, 0.7);
+    }
+
+    &:active {
+      svg path {
+        fill: $orange;
+      }
+
+      background-color: #FFF2ED;
+      box-shadow: none;
+    }
+  }
+
+  &__btn svg {
+    position: absolute;
+    left: 30px;
+    top: 15px;
+  }
+
+  &__link {
+    font-size: 18px;
+    line-height: 1.3;
+    letter-spacing: 0.01em;
+  }
+}
+
+.contact {
+
+  &__data {
+    position: relative;
+    margin-bottom: 15px;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 9px;
+      left: -25px;
+      @extend %bg;
+    }
+
+    &--location::before {
+      width: 15px;
+      height: 18px;
+      background-image: url('../images/location.svg');
+    }
+
+    &--call::before {
+      width: 19px;
+      height: 19px;
+      background-image: url('../images/calling.svg');
+    }
+
+    &--message::before {
+      width: 20px;
+      height: 18px;
+      background-image: url('../images/message.svg');
+    }
+  }
+
+  &__info {
+    font-size: 16px;
+    line-height: 2;
+  }
+}
+
+.social {
+  display: flex;
+
+  &__item:not(:last-child) {
+    margin-right: 13px;
+  }
+
+  &__link {
+    @extend %fl;
+    width: 39px;
+    height: 39px;
+    background-color: #ECECEC;
+    border-radius: 50%;
+    transition: box-shadow 0.5s,
+      background-color 0.5s,
+      fill 0.5s;
+
+    &:focus {
+      svg path {
+        fill: $dark;
+      }
+
+      background-color: #FFF2ED;
+      box-shadow: 0 0 0 2px rgba($orange, 0.7);
+    }
+
+    &:hover {
+      svg path {
+        fill: $white;
+      }
+
       background-color: #FF7A50;
     }
 
     &:active {
+      svg path {
+        fill: #FF7A50;
+      }
+
       background-color: #FFF2ED;
     }
   }
-
-  &__social-link--fb {
-    position: absolute;
-    left: -35px;
-  }
-
-  .footer-bottom {
-    padding: 30px 0;
-    text-align: center;
-  }
-
-
-
-
-  @import 'media';
+}
