--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -116,4 +116,56 @@ body {
   color: $white;
   font-weight: 400;
   line-height: 1.3;
+  border-radius: 5px;
+  color: $white;
+}
+
+.animation {
+  transition: background-color 0.5s,
+    border 0.5s,
+    text-shadow 0.5s,
+    color 0.5s,
+    box-shadow 0.5s;
+  border-radius: 5px;
+
+  &:focus {
+    box-shadow: 0 0 0 2px rgba($orange, 0.7);
+  }
+
+  &:hover {
+    color: $orange;
+  }
+
+  &:active {
+    text-shadow: 2px 2px 5px rgba(49, 53, 43, 0.5);
+  }
+}
+
+.animation-btn {
+  transition: box-shadow 0.5s,
+    color 0.5s,
+    background-color 0.5s;
+
+  &:focus {
+
+    color: $orange;
+    box-shadow: 0 0 0 2px rgba($orange, 0.7);
+  }
+
+  &:hover {
+
+    color: $orange;
+    background-color: $white;
+    box-shadow: 0 0 0 2px rgba($orange, 0.7);
+  }
+
+  &:active {
+
+    color: $orange;
+    background-color: $light;
+  }
+}
+
+.section-padding {
+  padding-top: 120px;
 }
