--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -6,6 +6,7 @@ $white:#fff;
 $dark-d:#000;
 $darkBlue: #363853;
 $light-orange:#FF7A50;
+$light:#FFF2ED;
 
 %bg {
   background-repeat: no-repeat;
@@ -13,7 +14,7 @@ $light-orange:#FF7A50;
   background-size: cover;
 }
 
-%fl {
+%flex {
   display: flex;
   justify-content: center;
   align-items: center;
