--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -45,27 +45,9 @@
     line-height: 1;
     color: $dark;
     text-decoration: underline transparent;
-    transition: background-color 0.5s,
-      border 0.5s,
-      text-shadow 0.5s,
-      color 0.5s,
-      box-shadow 0.5s;
-    border-radius: 5px;
 
     &--active {
       color: $orange;
-    }
-
-    &:focus {
-      box-shadow: 0 0 0 2px rgba($orange, 0.7);
-    }
-
-    &:hover {
-      color: $orange;
-    }
-
-    &:active {
-      text-shadow: 2px 2px 5px rgba(49, 53, 43, 0.5);
     }
   }
 }
@@ -78,7 +60,7 @@
   }
 
   &__link {
-    @extend %fl;
+    @extend %flex;
     position: relative;
     width: 44px;
     height: 44px;
@@ -89,6 +71,7 @@
       fill 0.5s;
 
     &:focus {
+      background-color: rgba(255, 122, 80, 0.1);
       box-shadow: 0 0 0 2px rgba($orange, 0.7);
     }
 
@@ -97,7 +80,15 @@
         stroke: $white;
       }
 
+      svg ellipse {
+        stroke: $white;
+      }
+
       background-color: $light-orange;
+    }
+
+    &:active {
+      background-color: $light;
     }
   }
 
@@ -215,8 +206,6 @@
     line-height: 1.3;
     border-radius: 5px;
     padding: 13px 0;
-    transition: box-shadow 0.5s, color 0.5s,
-      background-color 0.5s;
 
     &:focus {
       svg path {
@@ -242,8 +231,8 @@
         fill: $orange;
       }
 
-      background-color: #FFF2ED;
-      box-shadow: none;
+      color: $orange;
+      background-color:$light;
     }
   }
 
@@ -307,7 +296,7 @@
   }
 
   &__link {
-    @extend %fl;
+    @extend %flex;
     width: 39px;
     height: 39px;
     background-color: #ECECEC;
@@ -321,7 +310,7 @@
         fill: $dark;
       }
 
-      background-color: #FFF2ED;
+      background-color:$light;
       box-shadow: 0 0 0 2px rgba($orange, 0.7);
     }
 
@@ -330,15 +319,213 @@
         fill: $white;
       }
 
-      background-color: #FF7A50;
+      background-color: $light-orange;
     }
 
     &:active {
       svg path {
-        fill: #FF7A50;
+        fill: $light-orange;
       }
 
-      background-color: #FFF2ED;
+      background-color:$light;
     }
+  }
+}
+
+.hero {
+  &__main {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__content {
+    width: 40%;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
+  &__img {
+    @extend %bg;
+    width: 560px;
+    height: 660px;
+  }
+
+  &__title {
+    font-weight: 500;
+    font-size: 66px;
+    line-height: 1.3;
+    text-transform: uppercase;
+    color: $darkBlue;
+    margin-bottom: 20px;
+  }
+
+  &__time {
+    display: block;
+    color: $orange;
+  }
+
+  &__text {
+    margin-bottom: 20px;
+  }
+
+  &__btn {
+    padding: 12px 32px;
+    margin-right: 34px;
+  }
+
+  &__link {
+    color: $darkBlue;
+    text-decoration: underline;
+    transition: text-decoration 0.5s;
+
+    &:focus {
+      text-decoration: transparent;
+    }
+
+    &:active {
+      text-decoration: transparent;
+    }
+
+    &:hover {
+      text-decoration: transparent;
+    }
+  }
+}
+
+.categories {
+  &__popular {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 45px;
+  }
+
+  &__item:not(:last-child) {
+    margin-right: 20px;
+  }
+
+  &__btn {
+    position: relative;
+    color: $darkBlue;
+    background-color: $white;
+    line-height: 1.3;
+    padding: 22px 32px 22px 86px;
+    box-shadow: 0 0 0 1px #ECECEC;
+    border-radius: 5px;
+    transition: box-shadow 0.5s, color 0.5s, background-color 0.5s;
+
+    &:focus {
+      box-shadow: 0 0 0 2px rgba($orange, 0.7);
+    }
+
+    &:hover {
+      svg path {
+        fill: $orange;
+      }
+
+      color: $orange;
+      box-shadow: 0 0 0 2px rgba($orange, 0.7);
+      background-color: rgba(255, 122, 80, 0.1);
+    }
+
+    &:active {
+      color: $darkBlue;
+      background-color: $white;
+      box-shadow: inset 0 -5px 12px rgba(255, 104, 56, 0.2);
+    }
+
+    &--active {
+      color: $white;
+      background-color: $orange;
+
+      svg path {
+        fill: $white;
+      }
+    }
+  }
+
+  &__btn svg {
+    position: absolute;
+    top: 15px;
+    left: 25px;
+  }
+
+  &__title {
+    font-weight: 500;
+    font-size: 36px;
+    line-height: 1.3;
+    color: $darkBlue;
+    text-align: center;
+    margin-bottom: 60px;
+  }
+
+  &__link {
+    display: block;
+    width: fit-content;
+    margin: 0 auto;
+    color: $darkBlue;
+    text-decoration: underline;
+
+    &:focus {
+      text-decoration: transparent;
+    }
+
+    &:active {
+      text-decoration: transparent;
+    }
+
+    &:hover {
+      text-decoration: transparent;
+    }
+  }
+}
+
+.burgers {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 0 -30px 30px 0;
+
+  &__item {
+    width: 210px;
+    height: 299px;
+    background-color: $white;
+    margin: 0 30px 30px 0;
+    text-align: center;
+    transition: box-shadow 0.5s;
+
+    &:hover {
+      box-shadow: 0 0 0 1px $orange;
+    }
+  }
+}
+
+.product-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &__img {
+    margin: 0 auto;
+    margin-bottom: 10px;
+  }
+
+  &__title {
+    font-size: 15px;
+    line-height: 1;
+    margin-bottom: 10px;
+  }
+
+  &__price {
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 1.4;
+    color: $darkBlue;
+    margin-bottom: 10px;
+  }
+
+  &__btn {
+    font-size: 14px;
+    padding: 7px 16px;
   }
 }
