--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -111,40 +111,22 @@ body {
   flex-grow: 1;
 }
 
+.title {
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 1.3;
+  color: $darkBlue;
+}
+
 .button {
-  background-color: $orange;
-  color: $white;
   font-weight: 400;
   line-height: 1.3;
-  border-radius: 5px;
+  background-color: $orange;
   color: $white;
-}
-
-.animation {
-  transition: background-color 0.5s,
-    border 0.5s,
-    text-shadow 0.5s,
-    color 0.5s,
-    box-shadow 0.5s;
   border-radius: 5px;
-
-  &:focus {
-    box-shadow: 0 0 0 2px rgba($orange, 0.7);
-  }
-
-  &:hover {
-    color: $orange;
-  }
-
-  &:active {
-    text-shadow: 2px 2px 5px rgba(49, 53, 43, 0.5);
-  }
-}
-
-.animation-btn {
   transition: box-shadow 0.5s,
     color 0.5s,
-    background-color 0.5s;
+    background-color 0.5s, fill 0.5s;
 
   &:focus {
 
@@ -163,6 +145,23 @@ body {
 
     color: $orange;
     background-color: $light;
+  }
+}
+
+.animation {
+  border-radius: 5px;
+  transition: text-shadow 0.5s, border 0.5s, text-shadow 0.5s, color 0.5s, box-shadow 0.5s;
+
+  &:focus {
+    box-shadow: 0 0 0 2px rgba($orange, 0.7);
+  }
+
+  &:hover {
+    color: $orange;
+  }
+
+  &:active {
+    text-shadow: 2px 2px 5px rgba(49, 53, 43, 0.5);
   }
 }
 
