--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'fonts';
 @import 'vars';
 @import 'global';
+@import 'libs';
 
 .header {
   padding: 60px 0;
@@ -33,11 +34,14 @@
 
   &__list {
     display: flex;
-    justify-content: space-between;
+    margin-left: auto;
+    margin-right: 63px;
   }
 
-  &__item:not(:last-child) {
-    margin-right: 45px;
+  &__item {
+    &:not(:last-child) {
+      margin-right: 45px;
+    }
   }
 
   &__link {
@@ -55,8 +59,10 @@
 .user-nav {
   display: flex;
 
-  &__item:not(:last-child) {
-    margin-right: 35px;
+  &__item {
+    &:not(:last-child) {
+      margin-right: 35px;
+    }
   }
 
   &__link {
@@ -66,9 +72,7 @@
     height: 44px;
     background-color: transparent;
     border-radius: 5px;
-    transition: box-shadow 0.5s,
-      background-color 0.5s,
-      fill 0.5s;
+    transition: box-shadow 0.5s, background-color 0.5s, fill 0.5s, stroke 0.5s;
 
     &:focus {
       background-color: rgba(255, 122, 80, 0.1);
@@ -76,6 +80,8 @@
     }
 
     &:hover {
+      background-color: $light-orange;
+
       svg path {
         stroke: $white;
       }
@@ -83,32 +89,599 @@
       svg ellipse {
         stroke: $white;
       }
-
-      background-color: $light-orange;
     }
 
-    &:active {
-      background-color: $light;
+    &:hover span {
+      background-color: $white;
+      color: $light-orange;
     }
+  }
+
+  &:active {
+    background-color: $light;
   }
 
   &__num {
     position: absolute;
     top: 5px;
-    right: 5px;
-    width: 14px;
-    height: 14px;
-    border-radius: 50%;
+    left: 26px;
+    padding: 1px 4px;
+    border-radius: 100px;
     background-color: $orange;
     color: $white;
     font-size: 10px;
     line-height: 1.4;
     text-align: center;
+  }
+}
+
+.hero {
+  &__main {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__content {
+    width: 40%;
+  }
+
+  &__img {
+    @extend %bg;
+    width: 560px;
+    height: 660px;
+  }
+
+  &__title {
+    font-weight: 500;
+    font-size: 66px;
+    line-height: 1.3;
+    text-transform: uppercase;
+    color: $darkBlue;
+    margin-bottom: 20px;
+  }
+
+  &__time {
+    display: block;
+    color: $orange;
+  }
+
+  &__text {
+    margin-bottom: 20px;
+  }
+
+  &__btn {
+    padding: 12px 32px;
+    margin-right: 34px;
+  }
+
+  &__link {
+    color: $darkBlue;
+    text-decoration: underline;
+    transition: text-decoration 0.5s;
+
+    &:focus {
+      text-decoration: transparent;
+    }
+
+    &:active {
+      text-decoration: transparent;
+    }
 
     &:hover {
-      background-color: $white;
-      color: $light-orange;
+      text-decoration: transparent;
     }
+  }
+}
+
+.popular-categories {
+  .mixitup-control-active {
+    background-color: $orange;
+    color: $white;
+
+    svg path {
+      fill: $white;
+    }
+  }
+
+  &__menu {
+    display: flex;
+    align-items: center;
+    margin-bottom: 45px;
+  }
+
+  &__item {
+    &:not(:last-child) {
+      margin-right: 20px;
+    }
+  }
+
+  &__btn {
+    position: relative;
+    color: $darkBlue;
+    background-color: $white;
+    line-height: 1.3;
+    padding: 22px 32px 22px 86px;
+    box-shadow: 0 0 0 1px #ECECEC;
+    border-radius: 5px;
+    transition: box-shadow 0.5s, color 0.5s, background-color 0.5s, fill 0.5s;
+
+    &:focus {
+      box-shadow: 0 0 0 2px rgba($orange, 0.7);
+    }
+
+    &:hover {
+      color: $orange;
+      box-shadow: 0 0 0 2px rgba($orange, 0.7);
+      background-color: rgba(255, 122, 80, 0.1);
+
+      svg path {
+        fill: $orange;
+      }
+    }
+
+    &:active {
+      color: $darkBlue;
+      background-color: $white;
+      box-shadow: inset 0 -5px 12px rgba(255, 104, 56, 0.2);
+
+      svg path {
+        fill: $darkBlue;
+      }
+    }
+  }
+
+  &__btn svg {
+    position: absolute;
+    top: 15px;
+    left: 25px;
+  }
+
+  &__title {
+    text-align: center;
+    margin-bottom: 60px;
+  }
+
+  &__link {
+    display: block;
+    width: fit-content;
+    margin: 0 auto;
+    color: $darkBlue;
+    text-decoration: underline;
+
+    &:focus {
+      text-decoration: transparent;
+    }
+
+    &:active {
+      text-decoration: transparent;
+    }
+
+    &:hover {
+      text-decoration: transparent;
+    }
+  }
+}
+
+.delivery {
+  &__main {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__content {
+    width: 40%;
+  }
+
+  &__img {
+    @extend %bg;
+    width: 440px;
+    height: 585px;
+  }
+
+  &__title {
+    margin-bottom: 30px;
+  }
+
+  &__text {
+    margin-bottom: 30px;
+  }
+
+  &__items {
+    margin-bottom: 30px;
+  }
+
+  &__item {
+    position: relative;
+    font-size: 24px;
+    color: $darkBlue;
+    padding-left: 50px;
+
+    &::before {
+      content: '';
+      position: absolute;
+      width: 32px;
+      height: 32px;
+      top: 4px;
+      left: 0;
+      @extend %bg;
+
+    }
+
+    &--fast-del {
+      &::before {
+        width: 34px;
+        background-image: url('../images/svg/fast-del.svg');
+      }
+    }
+
+    &--courier {
+      &::before {
+        background-image: url('../images/svg/courier.svg');
+      }
+    }
+
+    &--branch {
+      &::before {
+        background-image: url('../images/svg/branch.svg');
+      }
+    }
+  }
+
+  &__item {
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
+  }
+
+  &__link {
+    font-size: 18px;
+    padding: 12px 32px;
+  }
+}
+
+
+.burgers {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 0 -30px 30px 0;
+
+  &__item {
+    margin: 0 30px 30px 0;
+  }
+}
+
+.best-restaurants {
+  &__title {
+    text-align: center;
+    margin-bottom: 45px;
+  }
+
+  &__items {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 0 -30px 30px 0;
+  }
+
+  &__item {
+    margin: 0 30px 30px 0;
+  }
+}
+
+.restaurant-card {
+
+  max-width: 370px;
+  height: 100%;
+  background-color: $white;
+  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  transition: box-shadow 0.5s;
+
+  &:hover {
+    box-shadow: 0px 3px 15px rgba(255, 104, 56, 0.5);
+  }
+
+  &__img {
+    margin-bottom: 15px;
+  }
+
+  &__title {
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 1.3;
+    padding-left: 20px;
+  }
+
+  &__time {
+    position: relative;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 2;
+    padding-left: 35px;
+    opacity: 0.9;
+
+    &::before {
+      position: absolute;
+      content: '';
+      width: 19px;
+      height: 20px;
+      top: 6px;
+      left: 0;
+      background-image: url('../images/svg/clock.svg');
+      @extend %bg;
+    }
+  }
+
+  &__common {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+  }
+
+  &__link {
+    background-color: $orange;
+    border-radius: 20px;
+    padding: 3px 33px;
+    transition: transform 1s;
+
+    &:hover {
+      svg path {
+        fill: $orange;
+      }
+
+      svg {
+        transform: translateX(10px);
+      }
+    }
+
+    &:focus {
+      svg path {
+        fill: $orange;
+      }
+    }
+
+    &:active {
+      svg path {
+        fill: $orange;
+      }
+
+      svg {
+        transform: translateX(0);
+      }
+    }
+  }
+}
+
+.comments {
+  &__title {
+    text-align: center;
+    margin-bottom: 45px;
+  }
+
+  &__slider {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__img {
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    margin-right: 80px;
+  }
+
+  &__review {
+    width: 100%;
+    max-width: 570px;
+  }
+
+  &__text {
+    position: relative;
+    font-style: italic;
+    margin-bottom: 30px;
+
+    &::before {
+      position: absolute;
+      content: '';
+      width: 24px;
+      height: 19px;
+      top: 0;
+      left: -35px;
+      background-image: url('../images/svg/quote-left.svg');
+      @extend %bg;
+    }
+
+    &::after {
+      position: absolute;
+      content: '';
+      width: 24px;
+      height: 19px;
+      bottom: 0;
+      right: -35px;
+      background-image: url('../images/svg/quote-right.svg');
+      @extend %bg;
+    }
+  }
+
+  &__name {
+    font-weight: 500;
+    line-height: 1.3;
+    color: $orange;
+  }
+
+  &__fan {
+    display: block;
+    font-size: 14px;
+    line-height: 1.3;
+    color: $dark;
+    padding-top: 15px;
+  }
+
+  .slick-dots {
+    display: flex;
+    justify-content: center;
+
+    li {
+
+      line-height: 0;
+
+      &:not(:last-child) {
+        margin-right: 15px;
+
+      }
+
+      button {
+        font-size: 0;
+        background-color: $gray;
+        width: 15px;
+        height: 15px;
+        border-radius: 50%;
+
+        &:focus {
+          box-shadow: 0 0 0 2px rgba($orange, 0.7);
+        }
+
+        &:hover {
+          background-color: $light;
+          border: 3px solid #FFAE94;
+        }
+
+        &:active {
+          background-color: #FFAE94;
+        }
+      }
+
+      &.slick-active {
+        button {
+          background-color: $orange;
+        }
+      }
+    }
+  }
+
+  .slick-prev,
+  .slick-next {
+    position: absolute;
+    width: 34px;
+    height: 34px;
+    background-color: rgba(255, 255, 255, 0.01);
+    border: 3px solid $gray;
+    border-radius: 50%;
+    bottom: -10px;
+  }
+
+  .slick-prev {
+    left: 40%;
+    transition: background-color 0.5s, norder 0.5s, fill 0.5s, box-shadow 0.5s;
+
+    &:focus {
+      box-shadow: 0 0 0 2px rgba($orange, 0.7);
+    }
+
+    &:hover {
+      background-color: $light;
+      border: 3px solid #FFAE94;
+
+      svg path {
+        fill: #FFAE94;
+      }
+    }
+
+    &:active {
+      background-color: $light;
+      border: 3px solid $light;
+
+      svg path {
+        fill: $light-orange;
+      }
+    }
+  }
+
+  .slick-next {
+    right: 40%;
+  }
+}
+
+.apps {
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__title {
+    margin-bottom: 45px;
+  }
+
+  &__text {
+    max-width: 538px;
+    width: 100%;
+    opacity: 0.9;
+    margin-bottom: 30px;
+  }
+
+  &__img {
+    @extend %bg;
+    width: 570px;
+    height: 380px;
+  }
+
+  &__items {
+    display: flex;
+  }
+
+  &__item {
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
+}
+
+.product-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 210px;
+  height: 100%;
+  background-color: $white;
+  padding: 20px 15px;
+  text-align: center;
+  transition: box-shadow 0.5s;
+
+  &:hover {
+    box-shadow: 0 0 0 1px $orange;
+  }
+
+
+  &__img {
+    margin: 0 auto;
+    margin-bottom: 10px;
+  }
+
+  &__title {
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 1;
+    margin-bottom: 10px;
+  }
+
+  &__price {
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 1.4;
+    color: $darkBlue;
+    margin-bottom: 10px;
+    margin-top: auto;
+  }
+
+  &__btn {
+    font-size: 14px;
+    padding: 7px 16px;
   }
 }
 
@@ -161,6 +734,11 @@
     border-top: 1px solid $gray;
     text-align: center;
   }
+
+  &__copy {
+    font-size: 14px;
+    line-height: 1;
+  }
 }
 
 .form-subscribe {
@@ -184,7 +762,7 @@
     }
 
     &:focus {
-      box-shadow: 0 0 0 2px $orange;
+      border: 2px solid $orange;
     }
 
     &:hover {
@@ -206,24 +784,19 @@
     line-height: 1.3;
     border-radius: 5px;
     padding: 13px 0;
+    transition: fill 0.5s;
 
     &:focus {
+
       svg path {
         fill: $orange;
       }
-
-      color: $orange;
-      box-shadow: 0 0 0 2px rgba($orange, 0.7);
     }
 
     &:hover {
       svg path {
         fill: $orange;
       }
-
-      color: $orange;
-      background-color: $white;
-      box-shadow: 0 0 0 2px rgba($orange, 0.7);
     }
 
     &:active {
@@ -231,8 +804,6 @@
         fill: $orange;
       }
 
-      color: $orange;
-      background-color:$light;
     }
   }
 
@@ -254,45 +825,54 @@
   &__data {
     position: relative;
     margin-bottom: 15px;
+    padding-left: 5px;
 
     &::before {
       content: '';
       position: absolute;
       top: 9px;
-      left: -25px;
+      left: 0;
       @extend %bg;
-    }
-
-    &--location::before {
-      width: 15px;
       height: 18px;
-      background-image: url('../images/location.svg');
     }
 
-    &--call::before {
-      width: 19px;
-      height: 19px;
-      background-image: url('../images/calling.svg');
+    &--location {
+      &::before {
+        width: 15px;
+        background-image: url('../images/location.svg');
+      }
     }
 
-    &--message::before {
-      width: 20px;
-      height: 18px;
-      background-image: url('../images/message.svg');
+    &--call {
+      &::before {
+        width: 19px;
+        background-image: url('../images/calling.svg');
+      }
+    }
+
+    &--message {
+      &::before {
+        width: 20px;
+        background-image: url('../images/message.svg');
+      }
     }
   }
 
   &__info {
     font-size: 16px;
     line-height: 2;
+    padding-left: 25px;
+
   }
 }
 
 .social {
   display: flex;
 
-  &__item:not(:last-child) {
-    margin-right: 13px;
+  &__item {
+    &:not(:last-child) {
+      margin-right: 13px;
+    }
   }
 
   &__link {
@@ -306,226 +886,28 @@
       fill 0.5s;
 
     &:focus {
+      background-color: $light;
+      box-shadow: 0 0 0 2px rgba($orange, 0.7);
+
       svg path {
         fill: $dark;
       }
-
-      background-color:$light;
-      box-shadow: 0 0 0 2px rgba($orange, 0.7);
     }
 
     &:hover {
+      background-color: $light-orange;
+
       svg path {
         fill: $white;
       }
-
-      background-color: $light-orange;
     }
 
     &:active {
+      background-color: $light;
+
       svg path {
         fill: $light-orange;
       }
-
-      background-color:$light;
     }
-  }
-}
-
-.hero {
-  &__main {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  &__content {
-    width: 40%;
-    margin-top: auto;
-    margin-bottom: auto;
-  }
-
-  &__img {
-    @extend %bg;
-    width: 560px;
-    height: 660px;
-  }
-
-  &__title {
-    font-weight: 500;
-    font-size: 66px;
-    line-height: 1.3;
-    text-transform: uppercase;
-    color: $darkBlue;
-    margin-bottom: 20px;
-  }
-
-  &__time {
-    display: block;
-    color: $orange;
-  }
-
-  &__text {
-    margin-bottom: 20px;
-  }
-
-  &__btn {
-    padding: 12px 32px;
-    margin-right: 34px;
-  }
-
-  &__link {
-    color: $darkBlue;
-    text-decoration: underline;
-    transition: text-decoration 0.5s;
-
-    &:focus {
-      text-decoration: transparent;
-    }
-
-    &:active {
-      text-decoration: transparent;
-    }
-
-    &:hover {
-      text-decoration: transparent;
-    }
-  }
-}
-
-.categories {
-  &__popular {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 45px;
-  }
-
-  &__item:not(:last-child) {
-    margin-right: 20px;
-  }
-
-  &__btn {
-    position: relative;
-    color: $darkBlue;
-    background-color: $white;
-    line-height: 1.3;
-    padding: 22px 32px 22px 86px;
-    box-shadow: 0 0 0 1px #ECECEC;
-    border-radius: 5px;
-    transition: box-shadow 0.5s, color 0.5s, background-color 0.5s;
-
-    &:focus {
-      box-shadow: 0 0 0 2px rgba($orange, 0.7);
-    }
-
-    &:hover {
-      svg path {
-        fill: $orange;
-      }
-
-      color: $orange;
-      box-shadow: 0 0 0 2px rgba($orange, 0.7);
-      background-color: rgba(255, 122, 80, 0.1);
-    }
-
-    &:active {
-      color: $darkBlue;
-      background-color: $white;
-      box-shadow: inset 0 -5px 12px rgba(255, 104, 56, 0.2);
-    }
-
-    &--active {
-      color: $white;
-      background-color: $orange;
-
-      svg path {
-        fill: $white;
-      }
-    }
-  }
-
-  &__btn svg {
-    position: absolute;
-    top: 15px;
-    left: 25px;
-  }
-
-  &__title {
-    font-weight: 500;
-    font-size: 36px;
-    line-height: 1.3;
-    color: $darkBlue;
-    text-align: center;
-    margin-bottom: 60px;
-  }
-
-  &__link {
-    display: block;
-    width: fit-content;
-    margin: 0 auto;
-    color: $darkBlue;
-    text-decoration: underline;
-
-    &:focus {
-      text-decoration: transparent;
-    }
-
-    &:active {
-      text-decoration: transparent;
-    }
-
-    &:hover {
-      text-decoration: transparent;
-    }
-  }
-}
-
-.burgers {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin: 0 -30px 30px 0;
-
-  &__item {
-    width: 210px;
-    height: 299px;
-    background-color: $white;
-    margin: 0 30px 30px 0;
-    text-align: center;
-    transition: box-shadow 0.5s;
-
-    &:hover {
-      box-shadow: 0 0 0 1px $orange;
-    }
-  }
-}
-
-.product-card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  &__img {
-    margin: 0 auto;
-    margin-bottom: 10px;
-  }
-
-  &__title {
-    font-size: 15px;
-    line-height: 1;
-    margin-bottom: 10px;
-  }
-
-  &__price {
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 1.4;
-    color: $darkBlue;
-    margin-bottom: 10px;
-  }
-
-  &__btn {
-    font-size: 14px;
-    padding: 7px 16px;
   }
 }
