--- a/app/scss/components/_contact.scss
+++ b/app/scss/components/_contact.scss
@@ -1,6 +1,11 @@
 .contact {
   margin-right: 75px;
 
+  @include r($small) {
+    order: 1;
+    margin-bottom: 30px;
+  }
+
   &__data {
     margin-bottom: 15px;
     padding-left: 5px;
