--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -1,3 +1,88 @@
 .header {
   padding: 60px 0;
+
+  @include r($large) {
+    padding: 50px 0;
+  }
+
+  @include r($medium) {
+    padding: 25px 0;
+  }
+
+  .mobile-menu {
+    @include r($medium) {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      z-index: 2;
+      background-color: $white;
+      display: block;
+      overflow-y: auto;
+      height: 100vh;
+      width: 90%;
+      padding: 25px 0 0 50px;
+      transform: translateX(-100%);
+      transition: transform 0.5s;
+
+      &.active {
+        transform: translateX(-4%);
+      }
+
+      .logo {
+        &__img {
+          width: 200px;
+          height: 39px;
+        }
+      }
+
+      .menu {
+        &__list {
+          display: block;
+          padding-top: 25px;
+          margin-bottom: 40px;
+          border-top: 1px solid #EEEFF3;
+        }
+
+        &__item {
+          &:not(:last-child) {
+            margin-bottom: 20px;
+          }
+        }
+      }
+
+      .contact {
+        &__data {
+          padding-left: 0;
+        }
+      }
+
+      .burger-mobile {
+        position: relative;
+        width: 30px;
+        top: -42px;
+        left: 80%;
+        height: 30px;
+        z-index: 10;
+
+        &:before,
+        &:after {
+          content: '';
+          position: absolute;
+          background-color: $darkBlue;
+          width: 25px;
+          height: 2px;
+        }
+
+        &:before {
+          transform: rotate(45deg);
+        }
+
+        &:after {
+          transform: rotate(-45deg);
+        }
+      }
+    }
+  }
 }
