--- a/app/scss/components/_menu.scss
+++ b/app/scss/components/_menu.scss
@@ -7,6 +7,10 @@
     display: flex;
     margin-left: auto;
     margin-right: 45px;
+
+    @include r($medium) {
+      display: none;
+    }
   }
 
   &__item {
