--- a/app/scss/components/page-index/_delivery.scss
+++ b/app/scss/components/page-index/_delivery.scss
@@ -3,10 +3,22 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+
+    @include r($small) {
+      width: 100%;
+    }
   }
 
   &__content {
     width: 50%;
+
+    @include r($medium) {
+      width: 80%;
+    }
+
+    @include r($small) {
+      width: 100%;
+    }
   }
 
   &__img {
@@ -14,6 +26,27 @@
     max-width: 440px;
     width: 100%;
     height: 585px;
+
+    @include r($xl) {
+      margin-right: 20px;
+    }
+
+    @include r($large) {
+      max-width: 380px;
+      width: 100%;
+      background-size: contain;
+    }
+
+    @include r($medium) {
+      position: absolute;
+      opacity: 0.2;
+      width: 100%;
+    }
+
+    @include r($small) {
+      max-width: 300px;
+      width: 100%;
+    }
   }
 
   &__title {
@@ -23,6 +56,14 @@
   &__text {
     margin-bottom: 30px;
     @include line-clamp(3);
+
+    @include r($large) {
+      font-size: 18px;
+    }
+
+    @include r($small) {
+      font-size: 16px;
+    }
   }
 
   &__items {
@@ -35,6 +76,15 @@
     color: $darkBlue;
     padding-left: 50px;
 
+    @include r($xl) {
+      font-size: 20px;
+      padding-left: 40px;
+    }
+
+    @include r($large) {
+      font-size: 18px;
+    }
+
     &::before {
       content: '';
       position: absolute;
@@ -43,6 +93,18 @@
       top: 4px;
       left: 0;
       @extend %bg;
+
+      @include r($xl) {
+        width: 30px;
+        height: 30px;
+        top: 2px;
+        left: 0;
+      }
+
+      @include r($large) {
+        top: -3px;
+        left: 3px;
+      }
     }
 
     &--fast-del {
@@ -69,10 +131,20 @@
     &:not(:last-child) {
       margin-bottom: 20px;
     }
+
+    @include r($xl) {
+      &:not(:last-child) {
+        margin-bottom: 15px;
+      }
+    }
   }
 
   &__link {
     font-size: 18px;
     padding: 12px 32px;
+
+    @include r($small) {
+      font-size: 14px;
+    }
   }
 }
