--- a/app/scss/components/page-index/_hero.scss
+++ b/app/scss/components/page-index/_hero.scss
@@ -7,12 +7,49 @@
 
   &__content {
     width: 40%;
+
+    @include r($xl) {
+      margin-right: 20px;
+    }
+
+    @include r($large) {
+      width: 50%;
+      margin-right: 10px;
+    }
+
+    @include r($medium) {
+      width: 70%;
+      margin-right: 0;
+    }
+
+    @include r($small) {
+      width: 80%;
+    }
   }
 
   &__img {
     @extend %bg;
     width: 560px;
     height: 660px;
+
+    @include r($large) {
+      max-width: 420px;
+      width: 100%;
+      background-size: contain;
+    }
+
+    @include r($medium) {
+      max-width: 320px;
+      width: 100%;
+      position: absolute;
+      right: 0;
+      opacity: 0.2;
+    }
+
+    @include r($small) {
+      max-width: 200px;
+      width: 100%;
+    }
   }
 
   &__title {
@@ -21,6 +58,19 @@
     line-height: 1.3;
     text-transform: uppercase;
     color: $darkBlue;
+
+    @include r($xl) {
+      font-size: 60px;
+    }
+
+    @include r($large) {
+      font-size: 55px;
+    }
+
+    @include r($small) {
+      font-size: 40px;
+      padding-top: 50px;
+    }
   }
 
   &__time {
@@ -31,17 +81,43 @@
   &__text {
     margin-bottom: 25px;
     @include line-clamp(3);
+
+    @include r($large) {
+      font-size: 18px;
+    }
+
+    @include r($small) {
+      font-size: 16px;
+    }
   }
 
   &__btn {
     padding: 12px 32px;
     margin-right: 23px;
+
+    @include r($large) {
+      font-size: 16px;
+      padding: 10px 30px;
+    }
+
+    @include r($small) {
+      font-size: 14px;
+      padding: 8px 24px;
+    }
   }
 
   &__link {
     color: $darkBlue;
     text-decoration: underline;
     transition: text-decoration 0.5s;
+
+    @include r($large) {
+      font-size: 18px;
+    }
+
+    @include r($small) {
+      font-size: 16px;
+    }
 
     &:focus,
     &:active,
