--- a/app/scss/components/page-index/_restaurant-card.scss
+++ b/app/scss/components/page-index/_restaurant-card.scss
@@ -6,6 +6,10 @@
   border-radius: 10px;
   transition: box-shadow 0.5s;
 
+  @include r($small) {
+    max-width: 100%;
+  }
+
   &:hover {
     box-shadow: 0px 3px 15px rgba($orange, 0.5);
   }
@@ -13,6 +17,10 @@
   &__img {
     margin-bottom: 15px;
     border-radius: 10px 10px 0 0;
+
+    @include r($small) {
+      width: 100%;
+    }
   }
 
   &__title {
