--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -207,3 +207,9 @@ body {
 .mobile-menu {
   display: none;
 }
+
+.breadcrumbs {
+  max-width: 1700px;
+  background-color: rgba(255, 122, 80, 0.1);
+  padding: 24px 0;
+}
