--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -24,3 +24,4 @@
 @import 'components/form-subscribe';
 @import 'components/contact';
 @import 'components/social';
+@import 'components/breadcrumbs';
