--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -20,6 +20,11 @@ $light:#FFF2ED;
   align-items: center;
 }
 
+%bg-cat {
+  background: #FAEDED;
+  border-radius: 3px;
+}
+
 $xl:1200;
 $large:992;
 $medium:768;
