--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -25,3 +25,6 @@
 @import 'components/contact';
 @import 'components/social';
 @import 'components/breadcrumbs';
+@import 'components/product-catalog';
+@import 'components/pagination';
+@import 'components/discounts';
