--- a/app/html/components/breadcrumbs.html
+++ b/app/html/components/breadcrumbs.html
@@ -1,10 +1,10 @@
 <section class="breadcrumbs">
-  <div class="breadcrumbs__container">
+  <div class="container">
     <ul class="breadcrumbs__list">
       <li class="breadcrumbs__item">
         <a class="breadcrumbs__link" href="#">Главная </a>
       </li>
-      <li>
+      <li class="breadcrumbs__item">
         <a class="breadcrumbs__link" href="#">Каталог товаров</a>
       </li>
     </ul>
