--- a/app/scss/components/_product-card.scss
+++ b/app/scss/components/_product-card.scss
@@ -6,6 +6,8 @@
   max-width: 210px;
   height: 100%;
   background-color: $white;
+  box-shadow: 0px 0px 0px 1px #ECECEC;
+  border-radius: 5px;
   padding: 20px 15px;
   text-align: center;
   transition: box-shadow 0.5s;
