--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -159,7 +159,7 @@ body {
     background-color 0.5s, fill 0.5s;
 
   &:focus {
-    color: $orange;
+    color: $white;
     box-shadow: 0 0 0 2px rgba($orange, 0.7);
   }
 
