--- a/app/scss/components/_pagination.scss
+++ b/app/scss/components/_pagination.scss
@@ -13,6 +13,29 @@
     @extend %bg-cat;
     margin-right: 6px;
     position: relative;
+    transition: background-color 0.3s;
+
+    &:hover {
+      background-color: $orange;
+
+      .pagination__link {
+        color: $white;
+      }
+    }
+
+    &:focus {
+      background: #FAEDED;
+      box-shadow: 0 0 0 2px rgba($orange, 0.7);
+    }
+
+    &:active {
+      background: #FAEDED;
+      box-shadow: inset 0px -1px 4px 2px rgba(0, 0, 0, 0.15);
+
+      .pagination__link {
+        color: $darkBlue;
+      }
+    }
 
     &--active {
       border: 1px solid #363853;
@@ -20,12 +43,12 @@
   }
 
   &__link {
-    color: #363853;
+    color: $darkBlue;
     position: absolute;
     top: 50%;
     left: 50%;
     margin-right: -50%;
-    transform: translate(-50%, -50%)
+    transform: translate(-50%, -50%);
   }
 
   &__arrows {
