--- a/app/scss/components/_product-catalog.scss
+++ b/app/scss/components/_product-catalog.scss
@@ -8,6 +8,11 @@
 
   &__name {
     margin-right: 15px;
+
+    svg {
+      width: 6px;
+      height: 11px;
+    }
   }
 
   &__inner {
@@ -37,6 +42,10 @@
     line-height: 1.3;
     padding: 6px 0;
   }
+
+  &__link--active {
+    color: $orange;
+  }
 }
 
 .product-catalog-offers {
@@ -50,6 +59,11 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 1.2;
+    transition: color 0.3s;
+
+    &:hover {
+      color: $orange;
+    }
   }
 
   &__box {
@@ -78,6 +92,15 @@
     @extend %bg-cat;
     border: 1px solid #ECECEC;
     margin-top: -2px;
+    transition: border 0.3s;
+
+    &:hover {
+      border: 1px solid $orange;
+    }
+
+    &:focus {
+      border: 1px solid $orange;
+    }
   }
 }
 
@@ -101,6 +124,10 @@
     @extend %bg-cat;
     border: 1px solid #FAEDED;
     margin: 0 5px;
+
+    &:focus {
+      border: 1px solid $orange;
+    }
   }
 }
 
@@ -142,7 +169,7 @@
 
 .jq-selectbox__select {
   height: 47px;
-  padding: 15px 30px 15px 15px;
+  padding: 15px 41px 15px 15px;
   border: 1px solid $gray;
   border-radius: 3px;
   color: $dark;
@@ -153,6 +180,13 @@
   line-height: 1.2;
 
   &:hover {
+    border: 1px solid $orange;
+    color: $orange;
+    background: transparent;
+  }
+
+  &:focus {
+    border: 1px solid $orange;
     background: transparent;
   }
 }
@@ -164,11 +198,16 @@
 .jq-selectbox__trigger-arrow {
   position: absolute;
   top: 19px;
-  right: 12px;
+  right: 20px;
   width: 6px;
   height: 11px;
   border: none;
   background-image: url('../../images/svg/slider-arrow.svg');
   @extend %bg;
   transform: rotate(-90deg);
+
+  &:hover {
+    filter: invert(49%) sepia(89%) saturate(1832%) hue-rotate(337deg) brightness(101%) contrast(101%);
+  }
+
 }
