--- a/app/html/components/discounts.html
+++ b/app/html/components/discounts.html
@@ -25,7 +25,7 @@
           <h3 class="restaurant-card__title discounts__subtitle">Чёрные бургеры на чёрный день </h3>
         </article>
       </li>
-
     </ul>
   </div>
 </section>
+</div>
