--- a/app/html/components/best-restaurants.html
+++ b/app/html/components/best-restaurants.html
@@ -5,8 +5,8 @@
 
       <li class="best-restaurants__item">
         <article class="restaurant-card">
-          <img class="restaurant-card__img" width="370" height="300" src="images/restaurants/blaze-pizza.jpg"
-            alt="Blaze Pizza">
+          <img class="restaurant-card__img best-restaurants__img" width="370" height="300"
+            src="images/restaurants/blaze-pizza.jpg" alt="Blaze Pizza">
           <h3 class="restaurant-card__title">Blaze Pizza</h3>
           <div class="restaurant-card__common">
             <time class="restaurant-card__time" datetime="11:00 - 22:00">11:00 - 22:00</time>
