--- a/app/html/components/breadcrumbs.html
+++ b/app/html/components/breadcrumbs.html
@@ -1,12 +1,13 @@
-<section class="breadcrumbs">
-  <div class="container">
-    <ul class="breadcrumbs__list">
-      <li class="breadcrumbs__item">
-        <a class="breadcrumbs__link" href="#">Главная </a>
-      </li>
-      <li class="breadcrumbs__item">
-        <a class="breadcrumbs__link" href="#">Каталог товаров</a>
-      </li>
-    </ul>
-  </div>
-</section>
+ <div class="wrapper">
+   <section class="breadcrumbs">
+     <div class="container">
+       <ul class="breadcrumbs__list">
+         <li class="breadcrumbs__item">
+           <a class="breadcrumbs__link" href="#">Главная </a>
+         </li>
+         <li class="breadcrumbs__item">
+           <a class="breadcrumbs__link">Каталог товаров</a>
+         </li>
+       </ul>
+     </div>
+   </section>
