--- a/app/html/components/footer.html
+++ b/app/html/components/footer.html
@@ -59,23 +59,23 @@
 
       <address class="address">
 
-        <ul class="contact">
-          <li class="contact__data">
+        <ul class="contact footer__contact">
+          <li class="contact__data footer__data">
             <a class="contact__info contact__info--location animation" href="#">
               ул. Смирнова 2/3</a>
           </li>
-          <li class="contact__data">
+          <li class="contact__data footer__data">
             <a class="contact__info contact__info--call animation" href="tel:+79068057043">
               79068057043</a>
           </li>
-          <li class="contact__data">
+          <li class="contact__data footer__data">
             <a class="contact__info contact__info--message animation" href=" mailto:support@sfood.com">
               support@sfood.com</a>
           </li>
         </ul>
 
         <ul class="social">
-          <li class="social__item">
+          <li class="social__item footer__social-item">
             <a class="social__link" target="_blank" href="#">
               <svg class="social__facebook">
                 <use xlink:href="images/sprite.svg#facebook"></use>
@@ -83,7 +83,7 @@
               <span class="sr-only">написать в фейсбук</span>
             </a>
           </li>
-          <li class="social__item">
+          <li class="social__item footer__social-item">
             <a class="social__link" target="_blank" href="#">
               <svg class="social__twitter">
                 <use xlink:href="images/sprite.svg#twitter"></use>
@@ -91,7 +91,7 @@
               <span class="sr-only">мы в твиттер</span>
             </a>
           </li>
-          <li class="social__item">
+          <li class="social__item footer__social-item">
             <a class="social__link" target="_blank" href="#">
               <svg class="social__instagram">
                 <use xlink:href="images/sprite.svg#instagram"></use>
