--- a/app/html/components/pagination.html
+++ b/app/html/components/pagination.html
@@ -1,14 +1,20 @@
  <div class="pagination">
-   <a class="pagination__prev pagination__arrows" href="#"></a>
    <ul class="pagination__list">
+     <li class="pagination__item pagination__item--noactive">
+       <a class="pagination__link pagination__link--prev">
+         <svg>
+           <use xlink:href="images/sprite.svg#slider-arrow"></use>
+         </svg>
+       </a>
+     </li>
      <li class="pagination__item pagination__item--active">
-       <a class="pagination__link" href="#">1</a>
+       <a class="pagination__link">1</a>
      </li>
      <li class="pagination__item">
        <a class="pagination__link" href="#">2</a>
      </li>
-     <li class="pagination__item">
-       <a class="pagination__link">...</a>
+     <li class="pagination__item pagination__item--dots">
+       <span class="pagination__link">...</span>
      </li>
      <li class="pagination__item">
        <a class="pagination__link" href="#">9</a>
@@ -16,6 +22,12 @@
      <li class="pagination__item">
        <a class="pagination__link" href="#">10</a>
      </li>
+     <li class="pagination__item">
+       <a class="pagination__link pagination__link--next" href="#">
+         <svg>
+           <use xlink:href="images/sprite.svg#slider-arrow"></use>
+         </svg>
+       </a>
+     </li>
    </ul>
-   <a class="pagination__next pagination__arrows" href="#"></a>
  </div>
