--- a/app/html/components/product-catalog.html
+++ b/app/html/components/product-catalog.html
@@ -1,7 +1,7 @@
 <section class="product-catalog">
   <div class="container">
     <div class="product-catalog__content">
-      <h2 class="product-catalog__title title">Каталог продуктов</h2>
+      <h1 class="product-catalog__title title">Каталог продуктов</h1>
       <form class="product-catalog__form" action="#">
         <select class="product-catalog__name">
           <option value="По названию" name="По названию">По названию</option>
@@ -19,7 +19,7 @@
     <div class="product-catalog__inner">
       <div class="product-catalog__filters">
         <div class="product-catalog-categories filter-style">
-          <h3 class="product-catalog-categories__title filter-title">Категории</h3>
+          <h2 class="product-catalog-categories__title filter-title">Категории</h2>
           <ul class="product-catalog-categories__list">
             <li class="product-catalog-categories__item">
               <a class="product-catalog-categories__link product-catalog-categories__link--active animation"
@@ -49,7 +49,7 @@
           </ul>
         </div>
         <div class="product-catalog-offers filter-style">
-          <h3 class="product-catalog-offers__title filter-title">Предложения</h3>
+          <h2 class="product-catalog-offers__title filter-title">Предложения</h2>
           <form class="product-catalog-offers__form" action="#">
             <label class="product-catalog-offers__label">
               <div class="product-catalog-offers__box">
@@ -75,19 +75,19 @@
           </form>
         </div>
         <div class="product-catalog-price filter-style">
-          <h3 class="product-catalog-price__title filter-title">Цена</h3>
+          <h2 class="product-catalog-price__title filter-title">Цена</h2>
           <form class="product-catalog-price__form" action="#">
             <label class="product-catalog-price__label">
-              от <span class="product-catalog-price__from"></span> <span>₽</span> до <span
-                class="product-catalog-price__to"></span> <span>₽</span>
+              от <span class="product-catalog-price__from"></span>
+              <span>₽</span> до <span class="product-catalog-price__to"></span> <span>₽</span>
             </label>
             <input class="product-catalog-price__input" type="text" data-min="0" data-max="1000" data-from="200"
               data-to="800">
           </form>
         </div>
       </div>
-      <ul class="burgers burgers-catalog">
-        <li class="burgers__item burgers-catalog__item mix category-a">
+      <ul class="product-catalog__burgers">
+        <li class="product-catalog__burger">
           <article class="product-card">
             <img class="product-card__img" width="140" height="140" src="images/burgers/cheese-burger.jpg"
               alt="Чизбургер с листьями салата">
@@ -98,55 +98,7 @@
             </button>
           </article>
         </li>
-
-        <li class="burgers__item burgers-catalog__item mix category-b">
-          <article class="product-card">
-            <img class="product-card__img" width="140" height="140" src="images/burgers/burger.jpg" alt="Бифбургер">
-            <h3 class="product-card__title">Бифбургер</h3>
-            <span class="product-card__price">190<span>руб.</span></span>
-            <button class="product-card__btn button" type="button">
-              В корзину
-            </button>
-          </article>
-        </li>
-
-        <li class="burgers__item  burgers-catalog__item mix category-c">
-          <article class="product-card">
-            <img class="product-card__img" width="140" height="140" src="images/burgers/queen-burger.jpg"
-              alt="Королевский чизбургер">
-            <h3 class="product-card__title">Королевский чизбургер</h3>
-            <span class="product-card__price">260<span>руб.</span></span>
-            <button class="product-card__btn button" type="button">
-              В корзину
-            </button>
-          </article>
-        </li>
-
-        <li class="burgers__item burgers-catalog__item mix category-d">
-          <article class="product-card">
-            <img class="product-card__img" width="140" height="140" src="images/burgers/black-burger.jpg"
-              alt="Черный гамбургер">
-            <h3 class="product-card__title">Черный гамбургер</h3>
-            <span class="product-card__price">199<span>руб.</span></span>
-            <button class="product-card__btn button" type="button">
-              В корзину
-            </button>
-          </article>
-        </li>
-
-        <li class="burgers__item burgers-catalog__item mix category-d">
-          <article class="product-card">
-            <img class="product-card__img" width="140" height="140" src="images/burgers/chicken-burger.jpg"
-              alt="Чикен бургер">
-            <h3 class="product-card__title">Чикен бургер</h3>
-            <span class="product-card__price">180<span>руб.</span></span>
-            <button class="product-card__btn button" type="button">
-              В корзину
-            </button>
-          </article>
-        </li>
-
-        <li class="burgers__item burgers-catalog__item mix category-a">
+        <li class="product-catalog__burger">
           <article class="product-card">
             <img class="product-card__img" width="140" height="140" src="images/burgers/cheese-burger.jpg"
               alt="Чизбургер с листьями салата">
@@ -157,76 +109,116 @@
             </button>
           </article>
         </li>
-
-        <li class="burgers__item burgers-catalog__item mix category-d">
+        <li class="product-catalog__burger">
           <article class="product-card">
-            <img class="product-card__img" width="140" height="140" src="images/burgers/burger.jpg" alt="Бифбургер">
-            <h3 class="product-card__title">Бифбургер</h3>
-            <span class="product-card__price">190<span>руб.</span></span>
+            <img class="product-card__img" width="140" height="140" src="images/burgers/cheese-burger.jpg"
+              alt="Чизбургер с листьями салата">
+            <h3 class="product-card__title">Чизбургер с листьями салата</h3>
+            <span class="product-card__price">160<span>руб.</span></span>
             <button class="product-card__btn button" type="button">
               В корзину
             </button>
           </article>
         </li>
-
-        <li class="burgers__item burgers-catalog__item mix category-c">
+        <li class="product-catalog__burger">
           <article class="product-card">
-            <img class="product-card__img" width="140" height="140" src="images/burgers/queen-burger.jpg"
-              alt="Королевский чизбургер">
-            <h3 class="product-card__title">Королевский чизбургер</h3>
-            <span class="product-card__price"> 160<span>руб.</span></span>
-            <button class="product-card__btn button" type="button">В корзину</button>
-          </article>
-        </li>
-
-        <li class="burgers__item burgers-catalog__item mix category-b">
-          <article class="product-card">
-            <img class="product-card__img" width="140" height="140" src="images/burgers/black-burger.jpg"
-              alt="Черный гамбургер">
-            <h3 class="product-card__title">Черный гамбургер</h3>
-            <span class="product-card__price">199<span>руб.</span></span>
+            <img class="product-card__img" width="140" height="140" src="images/burgers/cheese-burger.jpg"
+              alt="Чизбургер с листьями салата">
+            <h3 class="product-card__title">Чизбургер с листьями салата</h3>
+            <span class="product-card__price">160<span>руб.</span></span>
             <button class="product-card__btn button" type="button">
               В корзину
             </button>
           </article>
         </li>
-
-        <li class="burgers__item burgers-catalog__item mix category-a">
+        <li class="product-catalog__burger">
           <article class="product-card">
-            <img class="product-card__img" width="140" height="140" src="images/burgers/chicken-burger.jpg"
-              alt="Чикен бургер">
-            <h3 class="product-card__title">Чикен бургер</h3>
-            <span class="product-card__price"> 180<span>руб.</span></span>
+            <img class="product-card__img" width="140" height="140" src="images/burgers/cheese-burger.jpg"
+              alt="Чизбургер с листьями салата">
+            <h3 class="product-card__title">Чизбургер с листьями салата</h3>
+            <span class="product-card__price">160<span>руб.</span></span>
             <button class="product-card__btn button" type="button">
               В корзину
             </button>
           </article>
         </li>
-        <li class="burgers__item burgers-catalog__item mix category-b">
+        <li class="product-catalog__burger">
           <article class="product-card">
-            <img class="product-card__img" width="140" height="140" src="images/burgers/black-burger.jpg"
-              alt="Черный гамбургер">
-            <h3 class="product-card__title">Черный гамбургер</h3>
-            <span class="product-card__price">199<span>руб.</span></span>
+            <img class="product-card__img" width="140" height="140" src="images/burgers/cheese-burger.jpg"
+              alt="Чизбургер с листьями салата">
+            <h3 class="product-card__title">Чизбургер с листьями салата</h3>
+            <span class="product-card__price">160<span>руб.</span></span>
             <button class="product-card__btn button" type="button">
               В корзину
             </button>
           </article>
         </li>
-
-        <li class="burgers__item burgers-catalog__item mix category-a">
+        <li class="product-catalog__burger">
           <article class="product-card">
-            <img class="product-card__img" width="140" height="140" src="images/burgers/chicken-burger.jpg"
-              alt="Чикен бургер">
-            <h3 class="product-card__title">Чикен бургер</h3>
-            <span class="product-card__price"> 180<span>руб.</span></span>
+            <img class="product-card__img" width="140" height="140" src="images/burgers/cheese-burger.jpg"
+              alt="Чизбургер с листьями салата">
+            <h3 class="product-card__title">Чизбургер с листьями салата</h3>
+            <span class="product-card__price">160<span>руб.</span></span>
             <button class="product-card__btn button" type="button">
               В корзину
             </button>
           </article>
         </li>
-
-
+        <li class="product-catalog__burger">
+          <article class="product-card">
+            <img class="product-card__img" width="140" height="140" src="images/burgers/cheese-burger.jpg"
+              alt="Чизбургер с листьями салата">
+            <h3 class="product-card__title">Чизбургер с листьями салата</h3>
+            <span class="product-card__price">160<span>руб.</span></span>
+            <button class="product-card__btn button" type="button">
+              В корзину
+            </button>
+          </article>
+        </li>
+        <li class="product-catalog__burger">
+          <article class="product-card">
+            <img class="product-card__img" width="140" height="140" src="images/burgers/cheese-burger.jpg"
+              alt="Чизбургер с листьями салата">
+            <h3 class="product-card__title">Чизбургер с листьями салата</h3>
+            <span class="product-card__price">160<span>руб.</span></span>
+            <button class="product-card__btn button" type="button">
+              В корзину
+            </button>
+          </article>
+        </li>
+        <li class="product-catalog__burger">
+          <article class="product-card">
+            <img class="product-card__img" width="140" height="140" src="images/burgers/cheese-burger.jpg"
+              alt="Чизбургер с листьями салата">
+            <h3 class="product-card__title">Чизбургер с листьями салата</h3>
+            <span class="product-card__price">160<span>руб.</span></span>
+            <button class="product-card__btn button" type="button">
+              В корзину
+            </button>
+          </article>
+        </li>
+        <li class="product-catalog__burger">
+          <article class="product-card">
+            <img class="product-card__img" width="140" height="140" src="images/burgers/cheese-burger.jpg"
+              alt="Чизбургер с листьями салата">
+            <h3 class="product-card__title">Чизбургер с листьями салата</h3>
+            <span class="product-card__price">160<span>руб.</span></span>
+            <button class="product-card__btn button" type="button">
+              В корзину
+            </button>
+          </article>
+        </li>
+        <li class="product-catalog__burger">
+          <article class="product-card">
+            <img class="product-card__img" width="140" height="140" src="images/burgers/cheese-burger.jpg"
+              alt="Чизбургер с листьями салата">
+            <h3 class="product-card__title">Чизбургер с листьями салата</h3>
+            <span class="product-card__price">160<span>руб.</span></span>
+            <button class="product-card__btn button" type="button">
+              В корзину
+            </button>
+          </article>
+        </li>
       </ul>
     </div>
   </div>
