--- a/app/scss/components/_burgers.scss
+++ b/app/scss/components/_burgers.scss
@@ -38,10 +38,8 @@
   }
 }
 
-.burgers-catalog {
-  margin: 0 -10px 10px 0;
 
-  &__item {
-    margin: 0 10px 10px 0;
-  }
-}
+// &__item {
+//   margin: 0 10px 10px 0;
+// }
+// }
