--- a/app/scss/components/_discounts.scss
+++ b/app/scss/components/_discounts.scss
@@ -1,18 +1,17 @@
 .discounts {
-  &__items {
-    margin-bottom: 0;
-  }
+  // &__items {
+  //   margin-bottom: 0;
+  // }
 
-  &__item {
-    margin-bottom: 0;
-  }
+  // &__item {
+  //   margin-bottom: 0;
+  // }
 
   &__title {
     margin-bottom: 60px;
   }
 
   &__subtitle {
-    padding-right: 20px;
-    padding-bottom: 15px;
+    padding: 20px 15px;
   }
 }
