--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -52,6 +52,26 @@
     }
   }
 
+  &__contact {
+    margin-right: 75px;
+
+    @include r($small) {
+      order: 1;
+      margin-bottom: 30px;
+    }
+  }
+
+  &__data {
+    margin-bottom: 15px;
+    padding-left: 5px;
+  }
+
+  &__social-item {
+    &:not(:last-child) {
+      margin-right: 13px;
+    }
+  }
+
   &__items {
     @include r($xl) {
       margin-right: 25px;
