--- a/app/scss/components/_pagination.scss
+++ b/app/scss/components/_pagination.scss
@@ -9,83 +9,86 @@
   &__item {
     width: 48px;
     height: 48px;
-    padding: 15px 20px;
     @extend %bg-cat;
-    margin-right: 6px;
     position: relative;
-    transition: background-color 0.3s;
+    transition: background-color 0.3s, color 0.3s, fill 0.3s;
+
+    &:not(:last-child) {
+      margin-right: 6px;
+    }
 
     &:hover {
       background-color: $orange;
+      border: transparent;
 
       .pagination__link {
         color: $white;
+
+        &--next {
+          svg {
+            fill: $white;
+          }
+        }
+      }
+
+      &:focus {
+        background: #FAEDED;
+        box-shadow: 0 0 0 2px rgba($orange, 0.7);
+      }
+
+      &:active {
+        background: #FAEDED;
+        box-shadow: inset 0 -1px 4px 2px rgba(0, 0, 0, 0.15);
+
+        .pagination__link {
+          color: $darkBlue;
+        }
+      }
+
+      &--active {
+        border: 1px solid #363853;
       }
     }
 
-    &:focus {
-      background: #FAEDED;
-      box-shadow: 0 0 0 2px rgba($orange, 0.7);
-    }
+    &--dots {
+      &:hover {
+        background-color: #FAEDED;
 
-    &:active {
-      background: #FAEDED;
-      box-shadow: inset 0px -1px 4px 2px rgba(0, 0, 0, 0.15);
-
-      .pagination__link {
-        color: $darkBlue;
+        .pagination__link {
+          color: $darkBlue;
+        }
       }
     }
 
-    &--active {
-      border: 1px solid #363853;
+    &--noactive {
+      &:hover {
+        background: #FAEDED;
+      }
     }
   }
 
   &__link {
+    font-size: 18px;
+    line-height: 1;
     color: $darkBlue;
     position: absolute;
     top: 50%;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
-  }
 
-  &__arrows {
-    width: 48px;
-    height: 48px;
-    padding: 15px 20px;
-    @extend %bg-cat;
-    position: relative;
-
-    &::before,
-    &::after {
-      content: '';
-      position: absolute;
-      width: 11px;
-      height: 18px;
-      top: 16px;
-      @extend %bg;
+    &--prev,
+    &--next {
+      svg {
+        width: 11px;
+        height: 18px;
+        fill: $gray;
+      }
     }
-  }
 
-  &__prev {
-    padding-left: 30px;
-    margin-right: 6px;
-
-    &::before {
-      background-image: url('../../images/svg/slider-arrow.svg');
-      left: 18px;
-    }
-  }
-
-  &__next {
-    padding-right: 30px;
-
-    &::after {
-      background-image: url('../../images/svg/slider-arrow.svg');
-      right: 18px;
-      transform: scale(-1, 1);
+    &--next {
+      transform: rotate(180deg);
+      top: 8px;
     }
   }
 }
